--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3"
+  },
+  "scripts": {
+    "l": "node -r dotenv/config app/index.js"
   }
 }
